[project]
name = "ecaa-workflow-plotting"
version = "0.1.0"
description = "Renderer modules + plot-affordance dispatch for emitted package figures."
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7,<4",
    "numpy>=1.24,<3",
    "scipy>=1.10,<2",
    "pyyaml>=6",
]

[tool.setuptools.packages.find]
include = ["lib", "lib.*"]
